--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -20,9 +20,9 @@ jobs:
         with:
           python-version: "3.8"
       - name: 💿 Install Requirements
-        run: pip3 install -r requirements.txt
+        run: pip install -r requirements.txt
       - name: 🍳 Update dataset
-        run: python app.py
+        run: python3 app.py
       - name: 🚀 Commit and push if it changed
         run: |
           git config user.name "${GITHUB_ACTOR}"
